--- a/bin/main/application-dev.yml
+++ b/bin/main/application-dev.yml
@@ -1,37 +1,36 @@
 spring:
-  application:
-    name: OAUTH2-SERVICE
   datasource:
     url: "jdbc:mysql://103.235.104.247:3306/poolcardb?autoReconnect=true&useSSL=false"
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: pcadmin
     password: Antaheen@4813
     tomcat:
       max-active: 30
       max-idle: 15
   jpa:
+    hibernate:
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
   jmx:
     default-domain: ${spring.application.name}
-server:
-  port: ${PORT:8902}
 eureka:
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 logging:
   level:
-      root: WARN
-      com:
-        poolcar: DEBUG
-      org:
-        springframework:
-          security: DEBUG
-          web: DEBUG
-        hibernate: WARN
-        apache:
-          commons:
-            dbcp2: ERROR
+    root: WARN
+    com:
+      poolcar: DEBUG
+    org:
+      springframework:
+        security: DEBUG
+        web: DEBUG
+      hibernate: WARN
+      apache:
+        commons:
+          dbcp2: ERROR
   pattern:
     console: '%d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n'
